# plutus-starter

./: .gitignore  README.md  cabal.project  env.sh  nix-shell.sh  plutus-starter.cabal  rsc-inspect-oracle-haskell.sh  rsc-pay-to-script-haskell.sh  rsc-send-rewards-haskell.sh  rsc-start-oracle-haskell.sh  rsc-start-pab.sh  rsc-update-oracle-haskell.sh  start-oracle-haskell.sh  update-oracle-haskell.sh
MY-NOTES/: 0-run-start-cardano-node.sh  1-run-cardano-wallet-serv.sh  2-restore-testnet-wallet.sh  3-run-start-chain-index-nix-shell.sh  4-pab-nix-shell.sh
app/: inspect-oracle.hs  oracle-pab.hs  pay-to-script.hs  send-rewards.hs  start-oracle.hs  update-oracle.hs
deploy/testnet/: control-wallet-address.addr  datum-unused-pkh.json  datum-used-pkh.json  mint-tx.signed  mint-tx.unsigned  mintmarker.plutus  oracle.addr  oracle.plutus  pkhash.pkh  rsc-wallet-seed.json  rst-sw-key.vkey  set-oracle.signed  set-oracle.unsigned  sig-ctl.skey  ver-ctl.vkey
deploy/testnet/0-b-create-wallet/: create-wallet.sh
deploy/testnet/0-start-cardano-node/: 0-run-start-cardano-node.sh
deploy/testnet/1-serialise-script/: 1-a-serialise-oracle-validator.md  1-b-gen-script-address.sh
deploy/testnet/2-add-rewards-to-oracle/: 2-add-rewards-to-script.md
deploy/testnet/3-mint-marker-nft/: 0-a-serialise-minting-policy.md  0-run-check-node-sync.sh  0-run-get-inv-pkh.md  1-run-set-dirs-and-mint-address.sh  2-do-add-funds-to-minting-address.md  3-do-mint-marker.md  4-do-send-marker-and-datum-to-oracle.md  Full readme - Mint native tokens-ADR.md
deploy/testnet/4-update-oracle/: 4-update-oracle.sh
runtime/: pab-config.yml
src/: AppliedEscrow.hs  ContractProperties.hs  EscrowTest.hs  PAB.hs  PayToWallet.hs  PayToWalletTest.hs  Utils.hs
src/Oracle/: Deploy.hs  OffChain.hs  OnChain.hs  Oracle.hs  Trace.hs
src/RSC/: OffChain.hs
testnet/: pab-config.yml
tmp/: PAB.hs  PayToWalletTest.hs
tmp/RSC/: OffChain.hs
